<resources>
    <string name="app_name">Scrapp</string>
    <string name="cardName">Card 1</string>
    <string name="action_login">Login</string>
    <string name="despiece">Complete cars</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_profile">Profile</string>
    <string name="price">Price</string>
    <string name="vehicle">Vehicle</string>
    <string name="ref">Reference</string>
    <string name="name">Name</string>
    <string name="upload">Upload</string>
    <string name="brand">Make</string>
    <string name="model">Model</string>
    <string name="vin">VIN</string>
    <string name="year">Year</string>
    <string name="engine">Engine</string>
    <string name="owner">Owner</string>
    <string name="deregister">Car deregistering</string>
    <string name="addcomm">Additional comments</string>
</resources>
